--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Dialog</title>
-    <link type="text/css" rel="stylesheet" href="css/dialog.css" />
+    <link type="text/css" rel="stylesheet" href="../css/dialog.css" />
     <link type="text/css" rel="stylesheet" href="css/index.css" />
     <script src="js/jquery.js"></script>
     <script src="../dist/dialog.js"></script>
