--- a/examples/index.html
+++ b/examples/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="main">
-      <a id="button" class="button">弹窗</a>
+      <a id="button" class="ui-button">弹窗</a>
       <label><input id="follow" type="checkbox">依附元素</label>
       <label><input id="modal" type="checkbox" checked="checked">模态窗口</label>
       <label><input id="remove" type="checkbox" checked="checked">关闭时销毁弹窗</label>
