--- a/examples/index.html
+++ b/examples/index.html
@@ -6,6 +6,9 @@
     <link type="text/css" rel="stylesheet" href="../css/dialog.css" />
     <link type="text/css" rel="stylesheet" href="css/index.css" />
     <script src="js/jquery.js"></script>
+    <!--[if lte IE 8]>
+    <script src="js/es5-safe.js"></script>
+    <![endif]-->
     <script src="../dist/dialog.js"></script>
   </head>
   <body>
