--- a/examples/index.html
+++ b/examples/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="main">
+      <!-- focus color: #A0C2F9 -->
       <a id="button" class="ui-button">弹窗</a>
       <label><input id="follow" type="checkbox">依附元素</label>
       <label><input id="modal" type="checkbox" checked="checked">模态窗口</label>
