--- a/examples/index.html
+++ b/examples/index.html
@@ -14,10 +14,11 @@
   <body>
     <div class="main">
       <!-- focus color: #A0C2F9 -->
-      <a id="button" class="ui-button">弹窗</a>
-      <label><input id="follow" type="checkbox">依附元素</label>
-      <label><input id="modal" type="checkbox" checked="checked">模态窗口</label>
-      <label><input id="remove" type="checkbox" checked="checked">关闭时销毁弹窗</label>
+      <button type="button" id="button" class="ui-button">弹窗</button>
+      <label><input id="follow" type="checkbox" />依附元素</label>
+      <label><input id="modal" type="checkbox" checked="checked" />模态窗口</label>
+      <label><input id="unique" type="checkbox" checked="checked" />禁止重复弹窗</label>
+      <label><input id="remove" type="checkbox" checked="checked" />关闭时销毁弹窗</label>
     </div>
     <script src="js/index.js"></script>
   </body>
