--- a/examples/index.html
+++ b/examples/index.html
@@ -19,6 +19,7 @@
       <label><input id="modal" type="checkbox" checked="checked" />模态窗口</label>
       <label><input id="unique" type="checkbox" checked="checked" />禁止重复弹窗</label>
       <label><input id="remove" type="checkbox" checked="checked" />关闭时销毁弹窗</label>
+      <button type="button" id="destroy" class="ui-button">销毁</button>
     </div>
     <script src="js/index.js"></script>
   </body>
