--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
     <!--[if lte IE 8]>
     <script src="js/es5-safe.js"></script>
     <![endif]-->
-    <script src="../dist/dialog.min.js"></script>
+    <script src="../dist/dialog.js"></script>
   </head>
   <body>
     <div class="main">
